# ckan-docker

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
ckan/: Dockerfile  Dockerfile.dev
ckan-temp/: Dockerfile  Dockerfile.dev
ckan/setup/: prerun.py  start_ckan.sh  start_ckan.sh.override  start_ckan_development.sh.override
src/ckanext-doat/: README.md  setup.cfg  setup.py  test.ini
src/ckanext-doat/.github/workflows/: test.yml
src/ckanext-doat/ckanext/doat/: auth.py  cli.py  helpers.py  plugin.py  views.py
src/ckanext-doat/ckanext/doat/assets/: script.js
src/ckanext-doat/ckanext/doat/controllers/: banner.py  dataset.py
src/ckanext-doat/ckanext/doat/fanstatic/: webassets.yml
src/ckanext-doat/ckanext/doat/fanstatic/css/: doat.css
src/ckanext-doat/ckanext/doat/i18n/th/LC_MESSAGES/: ckanext-thai_gdc.po
src/ckanext-doat/ckanext/doat/logic/: action.py  auth.py  schema.py  validators.py
src/ckanext-doat/ckanext/doat/templates/: base.html  footer.html  header.html  page.html
src/ckanext-doat/ckanext/doat/templates/home/: layout1.html  layout3.html
src/ckanext-doat/ckanext/doat/templates/home/snippets/: banner.html
src/ckanext-doat/ckanext/doat/templates/organization/snippets/: organization_list.html
src/ckanext-doat/ckanext/doat/templates/package/: base.html
src/ckanext-doat/ckanext/doat/templates/user/: dashboard.html  read_base.html
src/ckanext-doat/ckanext/doat/tests/: test_helpers.py  test_plugin.py  test_views.py
src/ckanext-doat/ckanext/doat/tests/logic/: test_action.py  test_auth.py  test_validators.py
